crates/analyzer/tests/snapshots/errors__unary_not_on_int.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: cannot apply unary operator `not` to type `u256`
  ┌─ [snippet]:4:7
  │
4 │   not x
  │       ^ this has type `u256`; expected type `bool`


